added kpi module in reports.php

--- a/devtemplate/templates/projects_templateDV.html
+++ b/devtemplate/templates/projects_templateDV.html
@@ -1,6 +1,6 @@
 <div class="d-block pb-3 text-right">
 	<a id="startEdit" class="btn btn-warning" href="#Edit"><i class="fa fa-pencil-square-o mr-2" aria-hidden="true"></i>Edit</span>
-	<a id="exitEdit" class="btn btn-warning"  href="./projects_view.php?SelectedID=<%%VALUE(Id)%%>" style="display:none"><i class="fa fa-floppy-o mr-2" aria-hidden="true"></i>Save & Back</a>
+	<a id="exitEdit" class="btn btn-warning"  href="./projects_view.php?SelectedID=<%%VALUE(Id)%%>" style="display:none"><i class="fa fa-floppy-o mr-2" aria-hidden="true"></i>Back</a>
 </div>
 <!-- Edit this file to change the layout of the detail view form -->
 <nav aria-label="breadcrumb">
