--- a/devtemplate/assets/css/style.css
+++ b/devtemplate/assets/css/style.css
@@ -66,6 +66,21 @@ background: #ffffff; }
 p {
   font-size: 1.4rem;
 }
+
+#printOnly {
+  display : none;
+}
+
+@media print {
+   #printOnly {
+      display : block;
+   }
+
+   .left-sidebar{
+     display:none;
+   }
+}
+
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -6828,7 +6843,8 @@ button.login {
     color: #AC3A61;
   }
   #page-wrapper{
-    top: 10px;
+    /* top: 10px; */
+    top: 60px;
     background: #F0F3FA;
     min-height: 750px;
   }
@@ -7201,4 +7217,58 @@ select.form-control:not([size]):not([multiple]){
 }
 .select2-container .select2-choice .select2-arrow{
   padding: 8px 0;
+}
+.flex-wrapper {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.single-chart {
+  width: 33%;
+  justify-content: space-around ;
+}
+
+.circular-chart {
+  display: block;
+  margin: 10px auto;
+  max-width: 80%;
+  max-height: 250px;
+}
+
+.circle-bg {
+  fill: none;
+  stroke: #eee;
+  stroke-width: 3.8;
+}
+
+.circle {
+  fill: none;
+  stroke-width: 2.8;
+  stroke-linecap: round;
+  animation: progress 1s ease-out forwards;
+}
+
+@keyframes progress {
+  0% {
+    stroke-dasharray: 0 100;
+  }
+}
+
+.circular-chart.orange .circle {
+  stroke: #ff9f00;
+}
+
+.circular-chart.green .circle {
+  stroke: #4CC790;
+}
+
+.circular-chart.blue .circle {
+  stroke: #3c9ee5;
+}
+
+.percentage {
+  fill: #666;
+  font-family: sans-serif;
+  font-size: 0.5em;
+  text-anchor: middle;
 }
