--- a/devtemplate/templates/kpi_templateDV.html
+++ b/devtemplate/templates/kpi_templateDV.html
@@ -25,19 +25,20 @@
 					</div>
 				</div>
 
-				<div class="form-group">
+				<!-- <div class="form-group">
 					<hr class="hidden-md hidden-lg">
 					<label for="ot_ap_Date" class="control-label col-lg-3">Date</label>
 					<div class="col-lg-9">
 						<div class="form-control-static" id="ot_ap_Date"><%%COMBOTEXT(ot_ap_Date)%%></div>
 					</div>
-				</div>
+				</div> -->
 
 				<div class="form-group">
 					<hr class="hidden-md hidden-lg">
 					<label for="fo_Section_Caption" class="control-label col-lg-3">Section</label>
 					<div class="col-lg-9">
-						<input maxlength="100" type="text" class="form-control" name="fo_Section_Caption" id="fo_Section_Caption" value="<%%VALUE(fo_Section_Caption)%%>">
+						<!-- <input maxlength="100" type="text" class="form-control" name="fo_Section_Caption" id="fo_Section_Caption" value="<%%VALUE(fo_Section_Caption)%%>"> -->
+						<div class="form-control-static" id="fo_Section_Caption"><%%VALUE(fo_Section_Caption)%%></div>
 					</div>
 				</div>
 
