--- a/devtemplate/templates/projects_templateDV.html
+++ b/devtemplate/templates/projects_templateDV.html
@@ -6,10 +6,6 @@
 		<li class="breadcrumb-item"><a href="#">Project Register Detail</a></li>
 	</ol>
 </nav> -->
-<div class="d-block pb-3 text-right">
-	<a id="startEdit" class="btn btn-warning" href="#Edit"><i class="fa fa-pencil-square-o mr-2" aria-hidden="true"></i>Edit</span>
-	<a id="exitEdit" class="btn btn-warning"  href="./projects_view.php?SelectedID=<%%VALUE(Id)%%>" style="display:none"><i class="fa fa-floppy-o mr-2" aria-hidden="true"></i>Save</a>
-</div>
 
 <a name="detail-view"></a>
 <div class="panel-heading">
@@ -24,14 +20,14 @@
 <div id="projects_dv_container">
 	<div class="row">
 
-		<div class="form-group col-lg-4">
+		<div class="form-group col-lg-1">
 			<label for="Id" class="control-label">ID</label>
 			<div class="form-control-static" id="Id" aria-labelledby="selectedID">
 				<%%VALUE(Id)%%>
 			</div>
 		</div>
 
-		<div class="form-group col-lg-4">
+		<div class="form-group col-lg-8">
 			<label for="Name" class="control-label">Project title <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#Name-description"></i></label>
 			<span class="help-block collapse" id="Name-description">
 				<div class="alert alert-info">Title for the project</div>
@@ -40,7 +36,7 @@
 			<input maxlength="250" type="text" class="form-control" name="Name" id="Name" value="<%%VALUE(Name)%%>">
 		</div>
 
-		<div class="form-group col-lg-4">
+		<div class="form-group col-lg-2">
 			<label for="projectID" class="control-label">Project ID<span class="text-danger">
 					<%%TRANSLATION(*)%%>
 				</span> <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse"
@@ -54,6 +50,10 @@
 			<div class="text-danger vspacer-md" id="projectID-uniqueness-note" style="display: none;">
 				<%%TRANSLATION(unique field error)%%>
 			</div>
+		</div>
+		<div class="form-group col-lg-1">
+			<a id="startEdit" class="btn btn-warning" href="#Edit"><i class="fa fa-pencil-square-o mr-2" aria-hidden="true"></i>Edit</span>
+			<a id="exitEdit" class="btn btn-warning"  href="./projects_view.php?SelectedID=<%%VALUE(Id)%%>" style="display:none"><i class="fa fa-floppy-o mr-2" aria-hidden="true"></i>Save</a>
 		</div>
 		</div>
 	<!-- <ul class="nav nav-tabs customtab2 d-block" role="tablist" aria-label="Basic example">
@@ -142,8 +142,9 @@
 				<hr class="hidden-md hidden-lg">
 				<label for="fo_StartDate" class="control-label col-lg-2">Date (From - To)</label>
 				<div class="col-md-10 row">
-					<div class="col-md-6"><%%COMBO(fo_StartDate)%%></div>
-					<div class="col-md-6"><%%COMBO(fo_EndDate)%%></div>
+					<div class="col-md-5"><%%COMBO(fo_StartDate)%%></div>
+					<label class="col-md-2 control-label" style="text-align:center"> until </label>
+					<div class="col-md-5"><%%COMBO(fo_EndDate)%%></div>
 				</div>
 			</div>
 
