--- a/assets/scss/colors/blue-dark.scss
+++ b/assets/scss/colors/blue-dark.scss
@@ -6,9 +6,9 @@ File: scss
 */
 
 @import '../variable';
-$themecolor: #009efb;
+$themecolor: #ad3a62;
 $themecolor-dark: #028ee1;
-$topbar: #009efb;
+$topbar: #ad3a62;
 $sidebar:#272c33;
 $sidebar-text: #798699;
 $sidebar-icons: #798699;
