--- a/dummy-page/scss/colors/default.scss
+++ b/dummy-page/scss/colors/default.scss
@@ -5,7 +5,7 @@ Email: niravjoshi87@gmail.com
 File: scss
 */
 @import '../variable';
-$themecolor: #009efb;
+$themecolor: #ad3a62;
 $themecolor-dark: #028ee1;
 $topbar: #fff;
 
