--- a/assets/plugins/css-chart/css-chart.css
+++ b/assets/plugins/css-chart/css-chart.css
@@ -234,67 +234,67 @@
   background-image: linear-gradient(450deg, #55ce63 50%, transparent 50%, transparent), linear-gradient(270deg, #55ce63 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-0 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(90deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(90deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-5 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(108deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(108deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-10 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(126deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(126deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-15 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(144deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(144deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-20 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(162deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(162deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-25 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(180deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(180deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-30 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(198deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(198deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-35 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(216deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(216deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-40 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(234deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(234deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-45 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(252deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(252deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-50 {
-  background-image: linear-gradient(270deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(270deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-55 {
-  background-image: linear-gradient(288deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(288deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-60 {
-  background-image: linear-gradient(306deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(306deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-65 {
-  background-image: linear-gradient(324deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(324deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-70 {
-  background-image: linear-gradient(342deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(342deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-75 {
-  background-image: linear-gradient(360deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(360deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-80 {
-  background-image: linear-gradient(378deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(378deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-85 {
-  background-image: linear-gradient(396deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(396deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-90 {
-  background-image: linear-gradient(414deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(414deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-95 {
-  background-image: linear-gradient(432deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(432deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-info.css-bar-100 {
-  background-image: linear-gradient(450deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(450deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-warning.css-bar-0 {
   background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(90deg, #ffbc34 50%, #fafafa 50%, #fafafa);
@@ -426,67 +426,67 @@
 
 /* -- Radial Default -- */
 .css-bar-default.css-bar-0 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(90deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(90deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-5 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(108deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(108deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-10 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(126deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(126deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-15 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(144deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(144deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-20 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(162deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(162deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-25 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(180deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(180deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-30 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(198deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(198deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-35 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(216deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(216deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-40 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(234deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(234deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-45 {
-  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(252deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(90deg, #fafafa 50%, transparent 50%, transparent), linear-gradient(252deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-50 {
-  background-image: linear-gradient(270deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(270deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-55 {
-  background-image: linear-gradient(288deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(288deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-60 {
-  background-image: linear-gradient(306deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(306deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-65 {
-  background-image: linear-gradient(324deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(324deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-70 {
-  background-image: linear-gradient(342deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(342deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-75 {
-  background-image: linear-gradient(360deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(360deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-80 {
-  background-image: linear-gradient(378deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(378deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-85 {
-  background-image: linear-gradient(396deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(396deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-90 {
-  background-image: linear-gradient(414deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(414deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-95 {
-  background-image: linear-gradient(432deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(432deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-default.css-bar-100 {
-  background-image: linear-gradient(450deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #009efb 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(450deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #ad3a62 50%, #fafafa 50%, #fafafa);
 }
 
 
@@ -553,7 +553,7 @@
   background-image: linear-gradient(432deg, #fd5e94 50%, transparent 50%, transparent), linear-gradient(270deg, #fd5e94 50%, #fafafa 50%, #fafafa);
 }
 .css-bar-pink.css-bar-100 {
-  background-image: linear-gradient(450deg, #009efb 50%, transparent 50%, transparent), linear-gradient(270deg, #fd5e94 50%, #fafafa 50%, #fafafa);
+  background-image: linear-gradient(450deg, #ad3a62 50%, transparent 50%, transparent), linear-gradient(270deg, #fd5e94 50%, #fafafa 50%, #fafafa);
 }
 
 
