--- a/assets/scss/colors/default-dark.scss
+++ b/assets/scss/colors/default-dark.scss
@@ -6,7 +6,7 @@ File: scss
 */
 
 @import '../variable';
-$themecolor: #009efb;
+$themecolor: #ad3a62;
 $themecolor-dark: #028ee1;
 $topbar: #fff;
 $sidebar:#272c33;
