--- a/assets/scss/variable.scss
+++ b/assets/scss/variable.scss
@@ -24,7 +24,7 @@ $sidebar-text: #54667a;
 $sidebar-icons: #a6b7bf;
 
 $light-text: #a6b7bf;
-$themecolor: #009efb;
+$themecolor: #ad3a62;
 $themecolor-dark: #028ee1;
 
 /*bootstrap Color*/
@@ -32,7 +32,7 @@ $danger: #f62d51;
 $success: #55ce63;
 $warning: #ffbc34;
 $primary: #173C6A;
-$info: #009efb;
+$info: #ad3a62;
 $inverse: #2f3d4a;
 $muted: #90a4ae;
 $dark: #263238;
