--- a/devtemplate/templates/projects_templateDV.html
+++ b/devtemplate/templates/projects_templateDV.html
@@ -36,7 +36,7 @@
 			<input maxlength="250" type="text" class="form-control" name="Name" id="Name" value="<%%VALUE(Name)%%>">
 		</div>
 
-		<div class="form-group col-lg-2">
+		<div class="form-group col-lg-3">
 			<label for="projectID" class="control-label">Project ID<span class="text-danger">
 					<%%TRANSLATION(*)%%>
 				</span> <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse"
@@ -50,10 +50,6 @@
 			<div class="text-danger vspacer-md" id="projectID-uniqueness-note" style="display: none;">
 				<%%TRANSLATION(unique field error)%%>
 			</div>
-		</div>
-		<div class="form-group col-lg-1">
-			<a id="startEdit" class="btn btn-warning" href="#Edit"><i class="fa fa-pencil-square-o mr-2" aria-hidden="true"></i>Edit</span>
-			<a id="exitEdit" class="btn btn-warning"  href="./projects_view.php?SelectedID=<%%VALUE(Id)%%>" style="display:none"><i class="fa fa-floppy-o mr-2" aria-hidden="true"></i>Save</a>
 		</div>
 		</div>
 	<!-- <ul class="nav nav-tabs customtab2 d-block" role="tablist" aria-label="Basic example">
@@ -468,6 +464,8 @@
 			<%%INSERT_BUTTON%%>
 			<%%ATTACH_BUTTON%%>
 		</div>
+		<a id="startEdit" class="btn btn-warning float-btn-2" href="#Edit"><i class="fa fa-pencil-square-o mr-2" aria-hidden="true"></i></span>
+		<a id="exitEdit" class="btn btn-warning float-btn-2"  href="./projects_view.php?SelectedID=<%%VALUE(Id)%%>" style="display:none;"><i class="fa fa-floppy-o mr-2" aria-hidden="true"></i></a>
 	</div>
 </div>
 
