--- a/dummy-page/scss/variable.scss
+++ b/dummy-page/scss/variable.scss
@@ -25,7 +25,7 @@ $bodytext: #54667a;
 $sidebar-text: #54667a;
 $sidebar-icons: #a6b7bf;
 $light-text: #a6b7bf;
-$themecolor: #009efb;
+$themecolor: #ad3a62;
 $themecolor-dark: #028ee1;
 
 
@@ -35,7 +35,7 @@ $danger: #f62d51;
 $success: #55ce63;
 $warning: #ffbc34;
 $primary: #7460ee;
-$info: #009efb;
+$info: #ad3a62;
 $inverse: #2f3d4a;
 $muted: #90a4ae;
 $dark: #263238;
