--- a/devtemplate/templates/projects_templateDV.html
+++ b/devtemplate/templates/projects_templateDV.html
@@ -455,7 +455,9 @@
 	</div> -->
 	<div id="adminActions" class="adminActions">
 		<input type="checkbox" name="adminToggle" class="adminToggle" />
-		<a class="adminButton" href="#!"><i class="fa fa-ellipsis-v"></i></a>
+		<a id="startEdit" class="btn btn-warning float-btn-2" href="#Edit"><i class="ti-pencil-alt mr-2" aria-hidden="true"></i></a>
+		<a id="exitEdit" class="btn btn-warning float-btn-2"  href="./projects_view.php?SelectedID=<%%VALUE(Id)%%>" style="display:none;"><i class="ti-save mr-2" aria-hidden="true"></i></a>
+		<a class="adminButton" href="#!"><i class="ti-more"></i></a>
 		<div class="adminButtons">
 			<%%UPDATE_BUTTON%%>
 			<%%DESELECT_BUTTON%%>
@@ -464,8 +466,6 @@
 			<%%INSERT_BUTTON%%>
 			<%%ATTACH_BUTTON%%>
 		</div>
-		<a id="startEdit" class="btn btn-warning float-btn-2" href="#Edit"><i class="fa fa-pencil-square-o mr-2" aria-hidden="true"></i></span>
-		<a id="exitEdit" class="btn btn-warning float-btn-2"  href="./projects_view.php?SelectedID=<%%VALUE(Id)%%>" style="display:none;"><i class="fa fa-floppy-o mr-2" aria-hidden="true"></i></a>
 	</div>
 </div>
 
