--- a/devtemplate/templates/WorkOrder_templateDV.html
+++ b/devtemplate/templates/WorkOrder_templateDV.html
@@ -465,7 +465,7 @@
 		</div>
 
 		<!-- DV action buttons -->
-		<hr class="hidden-md hidden-lg">
+		<!-- <hr class="hidden-md hidden-lg">
 		<div class="col-md-4 col-lg-2" id="WorkOrder_dv_action_buttons">
 			<div class="btn-toolbar">
 				<div class="btn-group-vertical btn-group-lg" style="width: 100%;">
@@ -480,11 +480,22 @@
 					<%%INSERT_BUTTON%%>
 				</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 
 
 </div><!-- /div class="panel-body" -->
+<div id="fab2" class="adminActions">
+	<input type="checkbox" name="adminToggle" class="adminToggle" />
+	<a class="adminButton" href="#!"><i class="ti-more"></i></a>
+	<div class="adminButtons" id="fab2_content">
+		<%%UPDATE_BUTTON%%>
+		<%%DESELECT_BUTTON%%>
+		<%%DVPRINT_BUTTON%%>
+		<%%DELETE_BUTTON%%>
+		<%%INSERT_BUTTON%%>
+	</div>
+</div>
 	<script src="nicEdit.js"></script>
 	<script>
 		$j(function() {
